[workspace.package]
version = "0.5.0"
authors = ["Webb Technologies Inc."]
edition = "2021"
license = "Unlicense"
homepage = "https://tangle.finance"
repository = "https://github.com/webb-tools/tangle-restaking-parachain"

cargo-features = ["resolver"]

[workspace]
members = [
	"node",
	"primitives",
	"pallets/asset-registry",
	"pallets/currencies",
	"pallets/xcm-interface",
	"pallets/lst-minting",
	"pallets/parachain-staking",
	"runtime/tangle-polkadot",
	"tangle-restaking-subxt",
	"integration-tests"
]
resolver = "2"

[workspace.dependencies]

# Tangle Runtime
tangle-polkadot-runtime = { path = "runtime/tangle-polkadot" }

# Tangle pallets
tangle-asset-registry = { path = "pallets/asset-registry", default-features = false }
tangle-currencies = { path = "pallets/currencies", default-features = false }
tangle-parachain-staking = { path = "pallets/parachain-staking", default-features = false }
tangle-primitives = { path = "primitives" , default-features = false }
tangle-runtime-common = { path = "runtime/common", default-features = false }
tangle-lst-minting = { path = "pallets/lst-minting", default-features = false }
tangle-xcm-interface = { path = "pallets/xcm-interface", default-features = false }
pallet-traits = { path = "pallets/traits", default-features = false }

# Zenlink
merkle-distributor = { git = "https://github.com/bifrost-finance/Zenlink-DEX-Module", branch = "release-polkadot-v1.7.0", default-features = false }
zenlink-protocol = { git = "https://github.com/bifrost-finance/Zenlink-DEX-Module", branch = "release-polkadot-v1.7.0", default-features = false }
zenlink-protocol-rpc = { git = "https://github.com/bifrost-finance/Zenlink-DEX-Module", branch = "release-polkadot-v1.7.0" }
zenlink-protocol-runtime-api = { git = "https://github.com/bifrost-finance/Zenlink-DEX-Module", branch = "release-polkadot-v1.7.0", default-features = false }
zenlink-stable-amm = { git = "https://github.com/bifrost-finance/Zenlink-DEX-Module", branch = "release-polkadot-v1.7.0", default-features = false }
zenlink-stable-amm-rpc = { git = "https://github.com/bifrost-finance/Zenlink-DEX-Module", branch = "release-polkadot-v1.7.0" }
zenlink-stable-amm-runtime-api = { git = "https://github.com/bifrost-finance/Zenlink-DEX-Module", branch = "release-polkadot-v1.7.0", default-features = false }
zenlink-swap-router = { git = "https://github.com/bifrost-finance/Zenlink-DEX-Module", branch = "release-polkadot-v1.7.0", default-features = false }

# Orml
orml-tokens = { git = "https://github.com/bifrost-finance/open-runtime-module-library", branch = "release-polkadot-v1.7.0", default-features = false }
orml-traits = { git = "https://github.com/bifrost-finance/open-runtime-module-library", branch = "release-polkadot-v1.7.0", default-features = false }
orml-unknown-tokens = { git = "https://github.com/bifrost-finance/open-runtime-module-library", branch = "release-polkadot-v1.7.0", default-features = false }
orml-utilities = { git = "https://github.com/bifrost-finance/open-runtime-module-library", branch = "release-polkadot-v1.7.0", default-features = false }
orml-xcm = { git = "https://github.com/bifrost-finance/open-runtime-module-library", branch = "release-polkadot-v1.7.0", default-features = false }
orml-xcm-support = { git = "https://github.com/bifrost-finance/open-runtime-module-library", branch = "release-polkadot-v1.7.0", default-features = false }
orml-xtokens = { git = "https://github.com/bifrost-finance/open-runtime-module-library", branch = "release-polkadot-v1.7.0", default-features = false }
orml-oracle = { git = "https://github.com/bifrost-finance/open-runtime-module-library", branch = "release-polkadot-v1.7.0", default-features = false }

# polkadot-sdk (wasm)
cumulus-client-collator = { version = "0.8.0", default-features = false }
cumulus-client-consensus-proposer = { version = "0.8.0", default-features = false }
cumulus-pallet-aura-ext = { version = "0.8.0", default-features = false }
cumulus-pallet-parachain-system = { version = "0.8.0", default-features = false, features = ["parameterized-consensus-hook"] }
cumulus-pallet-xcm = { version = "0.8.0", default-features = false }
cumulus-pallet-xcmp-queue = { version = "0.8.0", default-features = false }
cumulus-pallet-dmp-queue = { version = "0.8.0", default-features = false }
cumulus-primitives-core = { version = "0.8.0", default-features = false }
cumulus-primitives-parachain-inherent = { version = "0.8.0", default-features = false }
cumulus-primitives-timestamp = { version = "0.8.0", default-features = false }
cumulus-primitives-utility = { version = "0.8.0", default-features = false }
cumulus-test-relay-sproof-builder = { version = "0.8.0", default-features = false }
frame-benchmarking = { version = "29.0.0", default-features = false }
frame-executive = { version = "29.0.0", default-features = false }
frame-support = { version = "29.0.0", default-features = false }
frame-system = { version = "29.0.0", default-features = false }
frame-system-benchmarking = { version = "29.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "27.0.0", default-features = false }
frame-try-runtime = { version = "0.35.0", default-features = false }
pallet-assets = { version = "30.0.0", default-features = false }
pallet-asset-rate = { version = "8.0.0", default-features = false }
pallet-aura = { version = "28.0.0", default-features = false }
pallet-authority-discovery = { version = "29.0.0", default-features = false }
pallet-authorship = { version = "29.0.0", default-features = false }
pallet-balances = { version = "29.0.0", default-features = false }
pallet-bounties = { version = "28.0.0", default-features = false }
pallet-collator-selection = { version = "10.0.0", default-features = false }
pallet-collective = { version = "29.0.0", default-features = false }
pallet-conviction-voting = { version = "29.0.0", default-features = false }
pallet-democracy = { version = "29.0.0", default-features = false }
pallet-elections-phragmen = { version = "30.0.0", default-features = false }
pallet-identity = { version = "29.0.0", default-features = false }
pallet-im-online = { version = "28.0.0", default-features = false }
pallet-indices = { version = "29.0.0", default-features = false }
pallet-membership = { version = "29.0.0", default-features = false }
pallet-message-queue = { version = "32.0.0", default-features = false }
pallet-multisig = { version = "29.0.0", default-features = false }
pallet-preimage = { version = "29.0.0", default-features = false }
pallet-proxy = { version = "29.0.0", default-features = false }
pallet-ranked-collective = { version = "29.0.0", default-features = false }
pallet-recovery = { version = "29.0.0", default-features = false }
pallet-referenda = { version = "29.0.0", default-features = false }
pallet-scheduler = { version = "30.0.0", default-features = false }
pallet-session = { version = "29.0.0", default-features = false }
pallet-staking = { version = "29.0.0", default-features = false }
pallet-sudo = { version = "29.0.0", default-features = false }
pallet-timestamp = { version = "28.0.0", default-features = false }
pallet-tips = { version = "28.0.0", default-features = false }
pallet-transaction-payment = { version = "29.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "29.0.0", default-features = false }
pallet-treasury = { version = "28.0.0", default-features = false }
pallet-utility = { version = "29.0.0", default-features = false }
pallet-whitelist = { version = "28.0.0", default-features = false }
pallet-xcm = { version = "8.0.0", default-features = false }
parachains-common = { version = "8.0.0", default-features = false }
parachain-info = { version = "0.8.0", package = "staging-parachain-info", default-features = false }
polkadot-core-primitives = { version = "8.0.0", default-features = false }
polkadot-parachain-primitives = { version = "7.0.0", default-features = false }
polkadot-primitives = { version = "8.0.0", default-features = false }
polkadot-runtime-common = { version = "8.0.0", default-features = false }
polkadot-runtime-parachains = { version = "8.0.0", default-features = false }
sp-api = { version = "27.0.0", default-features = false }
sp-application-crypto = { version = "31.0.0", default-features = false }
sp-arithmetic = { version = "24.0.0", default-features = false }
sp-authority-discovery = { version = "27.0.0", default-features = false }
sp-block-builder = { version = "27.0.0", default-features = false }
sp-blockchain = { version = "29.0.0", default-features = false }
sp-consensus = { version = "0.33.0", default-features = false }
sp-consensus-aura = { version = "0.33.0", default-features = false }
sp-consensus-slots = { version = "0.33.0", default-features = false }
sp-core = { version = "29.0.0", default-features = false }
sp-debug-derive = { version = "14.0.0", default-features = false }
sp-externalities = { version = "0.26.0", default-features = false }
sp-genesis-builder = { version = "0.8.0", default-features = false }
sp-inherents = { version = "27.0.0", default-features = false }
sp-io = { version = "31.0.0", default-features = false }
sp-keyring = { version = "32.0.0", default-features = false }
sp-keystore = { version = "0.35.0", default-features = false }
sp-maybe-compressed-blob = { version = "11.0.0", default-features = false }
sp-npos-elections = { version = "27.0.0", default-features = false }
sp-offchain = { version = "27.0.0", default-features = false }
sp-runtime = { version = "32.0.0", default-features = false }
sp-runtime-interface = { version = "25.0.0", default-features = false }
sp-session = { version = "28.0.0", default-features = false }
sp-staking = { version = "27.0.0", default-features = false }
sp-state-machine = { version = "0.36.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-storage = { version = "20.0.0", default-features = false }
sp-timestamp = { version = "27.0.0", default-features = false }
sp-tracing = { version = "16.0.0", default-features = false }
sp-transaction-pool = { version = "27.0.0", default-features = false }
sp-trie = { version = "30.0.0", default-features = false }
sp-version = { version = "30.0.0", default-features = false }
sp-wasm-interface = { version = "20.0.0", default-features = false }
sp-weights = { version = "28.0.0", default-features = false }
substrate-fixed = { git = "https://github.com/encointer/substrate-fixed", default-features = false }
xcm = { version = "8.0.0", package = "staging-xcm", default-features = false }
xcm-builder = { version = "8.0.0", package = "staging-xcm-builder", default-features = false }
xcm-executor = { version = "8.0.1", package = "staging-xcm-executor", default-features = false }

# polkadot-sdk (client)
cumulus-client-cli = { version = "0.8.0" }
cumulus-client-consensus-aura = { version = "0.8.0" }
cumulus-client-consensus-common = { version = "0.8.0" }
cumulus-client-consensus-relay-chain = { version = "0.8.0" }
cumulus-client-network = { version = "0.8.0" }
cumulus-client-pov-recovery = { version = "0.8.0" }
cumulus-client-service = { version = "0.8.0" }
cumulus-relay-chain-inprocess-interface = { version = "0.8.0" }
cumulus-relay-chain-interface = { version = "0.8.0" }
cumulus-relay-chain-minimal-node = { version = "0.8.0" }
cumulus-relay-chain-rpc-interface = { version = "0.8.0" }
frame-benchmarking-cli = { version = "33.0.0" }
node-inspect = { version = "0.13.0", package = "staging-node-inspect" }
pallet-transaction-payment-rpc = { version = "31.0.0" }
polkadot-cli = { version = "8.0.0" }
polkadot-service = { version = "8.0.0" }
sc-basic-authorship = { version = "0.35.0" }
sc-chain-spec = { version = "28.0.0" }
sc-cli = { version = "0.37.0" }
sc-client-api = { version = "29.0.0" }
sc-consensus = { version = "0.34.0" }
sc-consensus-aura = { version = "0.35.0" }
sc-consensus-grandpa = { version = "0.20.0" }
sc-consensus-manual-seal = { version = "0.36.0" }
sc-consensus-slots = { version = "0.34.0" }
sc-executor = { version = "0.33.0" }
sc-keystore = { version = "26.0.0" }
sc-network = { version = "0.35.0" }
sc-network-common = { version = "0.34.0" }
sc-network-sync = { version = "0.34.0" }
sc-offchain = { version = "30.0.0" }
sc-rpc = { version = "30.0.0" }
sc-rpc-api = { version = "0.34.0" }
sc-rpc-server = { version = "12.0.0" }
sc-service = { version = "0.36.0" }
sc-sysinfo = { version = "28.0.0" }
sc-telemetry = { version = "16.0.0" }
sc-tracing = { version = "29.0.0" }
sc-transaction-pool = { version = "29.0.0" }
sc-transaction-pool-api = { version = "29.0.0" }
sp-consensus-babe = { version = "0.33.0" }
sp-rpc = { version = "27.0.0" }
substrate-build-script-utils = { version = "11.0.0" }
substrate-frame-rpc-system = { version = "29.0.0" }
substrate-prometheus-endpoint = { version = "0.17.0" }
substrate-wasm-builder = { version = "18.0.0" }
try-runtime-cli = { version = "0.39.0" }
xcm-emulator = { version = "0.6.0" }
xcm-simulator = { version = "8.0.0" }

# Other
async-trait = { version = "0.1.76" }
bstringify = { version = "0.1.2" }
clap = { version = "4.5.8" }
env_logger = { version = "0.10.2" }
ethabi = { version = "18.0.0", default-features = false }
ethereum = { version = "0.14.0", default-features = false, features = ["with-codec"] }
futures = { version =  "0.3.30" }
hex = { version = "0.4.3", default-features = false }
hex-literal = { version = "0.4.1" }
impl-trait-for-tuples = { version = "0.2.2" }
jsonrpsee = { version = "0.20.3" }
log = { version = "0.4.22", default-features = false }
num-bigint = { version = "0.4.6", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
parity-scale-codec = { version = "3.6.12", default-features = false }
paste = { version = "1.0.15" }
scale-info = { version = "2.11.3", default-features = false }
serde = { version = "1.0.203", default-features = false }
serde_json = { version = "1.0.120", default-features = false }
similar-asserts = { version = "1.1.0" }
smallvec = { version = "1.13.1" }
static_assertions = { version = "1.1.0" }
strum = { version = "0.26.3", default-features = false, features = ["derive"] }
strum_macros = { version = "0.26.2" }
tiny-keccak = { version = "2.0", features = ["fips202"] }

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true

# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# Note that this does **not** affect crates that depend on Substrate. In other words, if you add
# a dependency on Substrate, you have to copy-paste this list in your own `Cargo.toml` (assuming
# that you want the same list). This list is only relevant when running `cargo build` from within
# the Substrate workspace.
#
# If you see an error mentioning "profile package spec ... did not match any packages", it
# probably concerns this list.
#
# This list is ordered alphabetically.
[profile.dev.package]
blake2 = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-dalek = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
primitive-types = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }
