[package]
name = "tangle-restaking-subxt"
version ={ workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
scale-info = { workspace = true, default-features = false, features = ["derive"] }
parity-scale-codec = { workspace = true, default-features = false, features = ["derive", "max-encoded-len"] }
subxt = { version = "0.34.0" }

