[package]
name = "tangle-kusama-integration-tests"
version = "0.8.0"
edition = "2021"

[dependencies]
env_logger = { workspace = true }
log = { workspace = true }
hex-literal = { workspace = true }
parity-scale-codec = { workspace = true }

# Substrate
sp-runtime = { workspace = true }
sp-io = { workspace = true }
sp-staking = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true }
pallet-assets = { workspace = true }
pallet-conviction-voting = { workspace = true }
pallet-referenda = { workspace = true }
pallet-staking = { workspace = true }

# Polkadot
polkadot-parachain-primitives = { workspace = true }
kusama-runtime = { workspace = true }
xcm = { workspace = true }
pallet-xcm = { workspace = true }
pallet-message-queue = { workspace = true }

# Cumulus
parachains-common = { workspace = true }
xcm-emulator = { workspace = true }

# Local
integration-tests-common = { path = "../common", default-features = false }
tangle-primitives = { workspace = true }
tangle-asset-registry = { workspace = true }
tangle-kusama-runtime = { workspace = true }
tangle-runtime-common = { workspace = true }
orml-traits = { workspace = true }
orml-tokens = { workspace = true }
